[Steven] feat(dashboard) - integrate dashboard logic
